@@ -4401,4 +4401,6 @@ Changelog for GXemul:
 		is possible to implement non-dyntrans CPUs.
 		Partial support for choosing MIPS ABI (affects disassembly and
 		register dumps, mostly).
-20090810	Beginning on variable write handlers.
+20090810	Beginning on variable write handlers: MIPS zr register is
+		read-only, MIPS' model can now be changed correctly, and
+		root.accuracy can only be assigned "cycle" or "sloppy".
